--- a/index.html
+++ b/index.html
@@ -69,7 +69,7 @@
   <!-- ✅ Icon images with links -->
   <a href="index.html" title="Home"><img src="icons/home.png" alt="Home" class="icon" /></a>
   <a href="uploads.html" title="My Uploads"><img src="icons/upload.png" alt="Uploads" class="icon" /></a>
-  <a href="search.html" title="Search"><img src="icons/search.png" alt="Search" class="icon" /></a>
+  <a href="edit-score.html" title="Music Score Editor"><img src="icons/score.png" alt="Music Score Editor" class="icon" /></a>
   <a href="saved-chats.html" title="Saved Chats"><img src="icons/chat.png" alt="Saved Chats" class="icon" /></a>
   <a href="saved-lyrics.html" title="Saved Lyrics"><img src="icons/lyrics.png" alt="Saved Lyrics" class="icon" /></a>
   <a href="Download-UI.html" title="Download"><img src="icons/download.png" alt="Download" class="icon" /></a>
