--- a/download-ui.html
+++ b/download-ui.html
@@ -106,17 +106,6 @@
       font-size: 1.5rem;
     }
 
-    nav a {
-      color: white;
-      margin-left: 1rem;
-      text-decoration: none;
-    }
-
-    nav a:hover,
-    nav a.active {
-      text-decoration: underline;
-    }
-
     /* Glow around starling in dark mode */
     @media (prefers-color-scheme: dark) {
       header {
@@ -128,14 +117,24 @@
 <body>
   <header>
     <h1>🎧 SoundMuseAI</h1>
-    <nav>
-      <a href="index.html">🏠 Home</a>
-      <a href="profile.html">👤 Profile</a>
-      <a href="uploads.html">📂 My Uploads</a>
-      <a href="search.html">🔍 Search</a>
-      <a href="download-ui.html" class="active">⬇️ Download</a>
-    </nav>
   </header>
+
+  <!-- ✅ Sidebar toolbar block -->
+  <div class="sidebar">
+    <!-- ✅ Icon images with links -->
+    <a href="index.html" title="Home"><img src="icons/home.png" alt="Home" class="icon" /></a>
+    <a href="uploads.html" title="My Uploads"><img src="icons/upload.png" alt="Uploads" class="icon" /></a>
+    <a href="edit-score.html" title="Music Score Editor"><img src="icons/score.png" alt="Music Score Editor" class="icon" /></a>
+    <a href="saved-chats.html" title="Saved Chats"><img src="icons/chat.png" alt="Saved Chats" class="icon" /></a>
+    <a href="saved-lyrics.html" title="Saved Lyrics"><img src="icons/lyrics.png" alt="Saved Lyrics" class="icon" /></a>
+    <a href="download-ui.html" title="Download"><img src="icons/download.png" alt="Download" class="icon" /></a>
+
+    <!-- “...” placeholder unchanged -->
+    <div style="margin: 12px 0;">...</div>
+
+    <!-- Keep theme toggle exactly as-is -->
+    <button id="theme-toggle" title="Toggle Light/Dark Mode">🌓</button>
+  </div>
 
   <main style="padding: 2rem;">
     <h2>Download Options</h2>
