--- a/saved-chats.html
+++ b/saved-chats.html
@@ -7,18 +7,23 @@
   <link rel="stylesheet" href="styles.css" />
 </head>
 <body>
-  <nav>
-    <ul class="toolbar">
-      <li><a href="index.html">🏠 Home</a></li>
-      <li><a href="profile.html">👤 Profile</a></li>
-      <li><a href="uploads.html">🎵 Uploads</a></li>
-      <li><a href="search.html">🔍 Search</a></li>
-      <li class="active"><a href="saved-chats.html">💬 Saved Chats</a></li>
-      <li><a href="saved-lyrics.html">📝 Lyrics</a></li>
-    </ul>
-  </nav>
 
-  <main>
+  <!-- ✅ Sidebar toolbar block -->
+  <div class="sidebar">
+    <a href="index.html" title="Home"><img src="icons/home.png" alt="Home" class="icon" /></a>
+    <a href="uploads.html" title="My Uploads"><img src="icons/upload.png" alt="Uploads" class="icon" /></a>
+    <a href="edit-score.html" title="Music Score Editor"><img src="icons/score.png" alt="Music Score Editor" class="icon" /></a>
+    <a href="saved-chats.html" title="Saved Chats"><img src="icons/chat.png" alt="Saved Chats" class="icon" /></a>
+    <a href="saved-lyrics.html" title="Saved Lyrics"><img src="icons/lyrics.png" alt="Saved Lyrics" class="icon" /></a>
+    <a href="download-ui.html" title="Download"><img src="icons/download.png" alt="Download" class="icon" /></a>
+
+    <div style="margin: 12px 0;">...</div>
+
+    <button id="theme-toggle" title="Toggle Light/Dark Mode">🌓</button>
+  </div>
+
+  <!-- 💬 Main Content -->
+  <main style="margin-left: 80px; padding: 2rem;">
     <section>
       <h2>💬 Your Saved Chats</h2>
       <p>You can pin, archive, delete or reopen saved SoundMuseAI chats.</p>
