--- a/saved-lyrics.html
+++ b/saved-lyrics.html
@@ -7,74 +7,147 @@
   <link rel="stylesheet" href="styles.css" />
 </head>
 <body>
-  <nav>
-    <ul class="toolbar">
-      <li><a href="index.html">🏠 Home</a></li>
-      <li><a href="profile.html">👤 Profile</a></li>
-      <li><a href="uploads.html">🎵 Uploads</a></li>
-      <li><a href="search.html">🔍 Search</a></li>
-      <li><a href="saved-chats.html">💬 Chats</a></li>
-      <li class="active"><a href="saved-lyrics.html">📝 Lyrics</a></li>
-    </ul>
+  <!-- ✅ Icon images with links -->
+  <nav class="toolbar">
+    <a href="index.html" title="Home"><img src="icons/home.png" alt="Home" class="icon" /></a>
+    <a href="uploads.html" title="My Uploads"><img src="icons/upload.png" alt="Uploads" class="icon" /></a>
+    <a href="edit-score.html" title="Music Score Editor"><img src="icons/score.png" alt="Music Score Editor" class="icon" /></a>
+    <a href="saved-chats.html" title="Saved Chats"><img src="icons/chat.png" alt="Saved Chats" class="icon" /></a>
+    <a href="saved-lyrics.html" title="Saved Lyrics"><img src="icons/lyrics.png" alt="Saved Lyrics" class="icon" /></a>
+    <a href="download-ui.html" title="Download"><img src="icons/download.png" alt="Download" class="icon" /></a>
+    
+    <!-- “...” placeholder unchanged -->
+    <div style="margin: 12px 0;">...</div>
+    
+    <!-- Keep theme toggle exactly as-is -->
+    <button id="theme-toggle" title="Toggle Light/Dark Mode">🌓</button>
   </nav>
 
-  <main>
-    <section>
-      <h2>📝 Your Saved Lyrics & Instructions</h2>
-      <p>Reopen, edit, pin or download your musical ideas with ease.</p>
+  <main style="margin-left: 80px; padding: 2rem;">
+    <h2>📝 Your Saved Lyrics & Instructions</h2>
+    <p>Reopen, edit, pin or download your musical ideas with ease.</p>
 
-      <div class="chat-entry">
-        <div class="chat-header">
-          <input type="text" value="Folder 23 – Outshine" class="chat-title" />
-          <span class="chat-date">Saved: 27 Aug 2025</span>
-          <div class="chat-actions">
-            <button class="pin">📌</button>
-            <button class="menu">⋮</button>
-            <div class="dropdown hidden">
-              <ul>
-                <li><button>📍 Pin to Top</button></li>
-                <li><button>📁 Archive</button></li>
-                <li><button>🗑️ Delete</button></li>
-                <li><button>🔁 Reopen</button></li>
-                <li><button>⬇️ Download</button></li>
-              </ul>
-            </div>
-          </div>
-        </div>
-        <pre class="lyric-snippet">[Intro]\n[Act 1 – Emergence]\nSoft strings rise in 432Hz, harmonic shimmer overlays 111Hz...\n</pre>
+    <!-- 🔘 Radio buttons for sort options -->
+    <div style="margin: 1rem 0;">
+      <label><input type="radio" name="sortOption" checked> Sort by File Type</label>
+      <label style="margin-left: 1rem;"><input type="radio" name="sortOption"> Sort Alphabetically</label>
+    </div>
+
+    <!-- 🎵 Mock file list -->
+    <div class="file-entry">
+      <strong>🎵 demo-neverknowuntilyoutry.wav</strong>
+      <div class="file-actions">
+        <button>View</button>
+        <button>Archive</button>
+        <button>Delete</button>
       </div>
+    </div>
 
-      <div class="chat-entry">
-        <div class="chat-header">
-          <input type="text" value="Gamma Waltz – Symphony Movement II" class="chat-title" />
-          <span class="chat-date">Saved: 25 Aug 2025</span>
-          <div class="chat-actions">
-            <button class="pin">📌</button>
-            <button class="menu">⋮</button>
-            <div class="dropdown hidden">
-              <ul>
-                <li><button>📍 Pin to Top</button></li>
-                <li><button>📁 Archive</button></li>
-                <li><button>🗑️ Delete</button></li>
-                <li><button>🔁 Reopen</button></li>
-                <li><button>⬇️ Download</button></li>
-              </ul>
-            </div>
-          </div>
-        </div>
-        <pre class="lyric-snippet">[Movement II – Gamma Waltz]\nTempo 90bpm, full orchestra + subtle 5D shimmer...\n</pre>
+    <div class="file-entry">
+      <strong>🎶 mysterymuse.MP3</strong>
+      <div class="file-actions">
+        <button>View</button>
+        <button>Archive</button>
+        <button>Delete</button>
       </div>
+    </div>
 
-    </section>
+    <div class="file-entry">
+      <strong>🎶 We-Build-Together.mp3</strong>
+      <div class="file-actions">
+        <button>View</button>
+        <button>Archive</button>
+        <button>Delete</button>
+      </div>
+    </div>
+
+    <div class="file-entry">
+      <strong>🎼 wentforgold.midi</strong>
+      <div class="file-actions">
+        <button>View</button>
+        <button>Archive</button>
+        <button>Delete</button>
+      </div>
+    </div>
   </main>
 
+  <style>
+    body {
+      background-image: url('Background-aurora.png');
+      background-size: cover;
+      background-repeat: no-repeat;
+      background-attachment: fixed;
+      background-position: center;
+      color: #fff;
+      font-family: 'Segoe UI', Tahoma, Geneva, Verdana, sans-serif;
+      margin: 0;
+    }
+
+    .toolbar {
+      position: fixed;
+      top: 0;
+      left: 0;
+      width: 64px;
+      height: 100vh;
+      background-color: rgba(0, 0, 0, 0.7);
+      padding: 0.5rem;
+      display: flex;
+      flex-direction: column;
+      align-items: center;
+      z-index: 100;
+    }
+
+    .toolbar .icon {
+      width: 32px;
+      height: 32px;
+      margin: 0.75rem 0;
+      transition: transform 0.2s ease;
+    }
+
+    .toolbar .icon:hover {
+      transform: scale(1.2);
+    }
+
+    .file-entry {
+      background-color: rgba(255, 255, 255, 0.1);
+      padding: 1rem;
+      border-radius: 12px;
+      margin-bottom: 1rem;
+      display: flex;
+      justify-content: space-between;
+      align-items: center;
+      box-shadow: 0 2px 6px rgba(0,0,0,0.2);
+    }
+
+    .file-actions button {
+      margin-left: 0.5rem;
+      padding: 0.4rem 1rem;
+      border: none;
+      border-radius: 6px;
+      cursor: pointer;
+      background-color: #ddd;
+      color: #333;
+      font-weight: bold;
+      transition: background-color 0.3s ease;
+    }
+
+    .file-actions button:hover {
+      background-color: #bbb;
+    }
+  </style>
+
   <script>
-    const menus = document.querySelectorAll('.menu');
-    menus.forEach(menu => {
-      menu.addEventListener('click', () => {
-        const dropdown = menu.nextElementSibling;
-        dropdown.classList.toggle('hidden');
+    // You can later hook sorting functions here
+    const radioButtons = document.querySelectorAll('input[name="sortOption"]');
+    radioButtons.forEach(radio => {
+      radio.addEventListener('change', () => {
+        alert('Sorting not yet implemented – just a mockup for now!');
       });
+    });
+
+    // Optional: Theme toggle logic (preserving user’s toggle)
+    document.getElementById('theme-toggle').addEventListener('click', () => {
+      document.body.classList.toggle('dark-theme');
     });
   </script>
 </body>
