--- a/index.html
+++ b/index.html
@@ -72,7 +72,7 @@
   <a href="edit-score.html" title="Music Score Editor"><img src="icons/score.png" alt="Music Score Editor" class="icon" /></a>
   <a href="saved-chats.html" title="Saved Chats"><img src="icons/chat.png" alt="Saved Chats" class="icon" /></a>
   <a href="saved-lyrics.html" title="Saved Lyrics"><img src="icons/lyrics.png" alt="Saved Lyrics" class="icon" /></a>
-  <a href="download-UI.html" title="Download"><img src="icons/download.png" alt="Download" class="icon" /></a>
+  <a href="download-ui.html" title="Download"><img src="icons/download.png" alt="Download" class="icon" /></a>
 
   <!-- “…” placeholder unchanged -->
   <div style="margin: 12px 0;">...</div>
