--- a/index.html
+++ b/index.html
@@ -87,7 +87,12 @@
       <div class="left-panel">
         <div class="chat-box">
           <h3>SoundMuse AI Chat</h3>
-          <iframe id="gpt-embed" src="https://chat.openai.com/g/g-68ac96ee9cf081919a38ac6703ac70745-soundmuseai" width="100%" height="500" frameborder="0"></iframe>
+<button onclick="window.open('https://chat.openai.com/g/g-68ac96ee9cf081919a38ac6703ac70745-soundmuseai', '_blank', 'width=800,height=600')">
+  🧠 Open SoundMuseAI in ChatGPT
+</button>
+<p style="font-size: 0.85rem; color: #ccc; margin-top: 6px;">
+  (Opens in a new window for full compatibility, especially in Firefox)
+</p>
         </div>
 
         <!-- Moved here -->
