--- a/profile.html
+++ b/profile.html
@@ -121,7 +121,7 @@
       <!-- ICON LINKS ADDED BELOW -->
       <a href="index.html"><img src="icons/home.png" alt="Home" class="icon" /></a>
       <a href="uploads.html"><img src="icons/upload.png" alt="Uploads" class="icon" /></a>
-      <a href="search.html"><img src="icons/search.png" alt="Search" class="icon" /></a>
+      <a href="edit-score.html" title="Music Score Editor"><img src="icons/score.png" alt="Music Score Editor" class="icon" /></a>
       <a href="saved-chats.html"><img src="icons/chat.png" alt="Chat" class="icon" /></a>
       <a href="saved-lyrics.html"><img src="icons/lyrics.png" alt="Lyrics" class="icon" /></a>
       <a href="Download-UI.html"><img src="icons/download.png" alt="Download" class="icon" /></a>
