--- a/index.html
+++ b/index.html
@@ -87,34 +87,50 @@
      <div class="left-panel">
        <div class="chat-box">
   <h3>SoundMuse AI Chat</h3>
-  <button onclick="openSoundMuse()" title="Open SoundMuseAI in a floating window">
-    Open SoundMuseAI in ChatGPT
-  </button>
-  <p style="font-size: 0.85rem; color: #ccc; margin-top: 6px;">
-    (Opens in a floating window; you may need to allow pop-ups for this site.)
-  </p>
 
-  <script>
-    function openSoundMuse() {
-      const url = "https://chat.openai.com/g/g-68ac96ee9cf081919a38ac6703ac70745-soundmuseai"; // <-- exact ID + slug
-      const w = 900, h = 700;
-      const left = Math.round((screen.width - w) / 2);
-      const top = Math.round((screen.height - h) / 2);
-      const win = window.open(
-        url,
-        "SoundMuseAI",
-        `width=${w},height=${h},left=${left},top=${top},resizable=yes,scrollbars=yes`
-      );
-      if (win) win.focus();
-    }
-  </script>
+<button onclick="openSoundMuse()" title="Open SoundMuseAI in a floating window">
+  Open SoundMuseAI in ChatGPT
+</button>
 
-  <p style="font-size: 0.8rem; color:#ccc; margin-top:4px;">
-    <a href="https://chat.openai.com/g/g-68ac96ee9cf081919a38ac6703ac70745-soundmuseai"
-       target="_blank" rel="noopener">
-       Open in a new tab instead
-    </a>
-  </p>
+<p style="font-size: 0.85rem; color: #ccc; margin-top: 6px;">
+  (Opens in a floating window; allow pop-ups for this site.)
+</p>
+
+<script>
+function openSoundMuse() {
+  // Primary (from your Share dialog)
+  const primary = "https://chatgpt.com/g/g-68ac96ee9cf081919a38a6730ac70745-soundmuseai";
+  // Fallbacks
+  const idOnly   = "https://chatgpt.com/g/g-68ac96ee9cf081919a38a6730ac70745";
+  const legacy   = "https://chat.openai.com/g/g-68ac96ee9cf081919a38a6730ac70745-soundmuseai";
+  const legacyId = "https://chat.openai.com/g/g-68ac96ee9cf081919a38a6730ac70745";
+
+  const w = 900, h = 700;
+  const left = Math.round((screen.width - w) / 2);
+  const top  = Math.round((screen.height - h) / 2);
+
+  let win = window.open(
+    primary,
+    "SoundMuseAI",
+    `width=${w},height=${h},left=${left},top=${top},resizable=yes,scrollbars=yes`
+  );
+  if (!win) { window.open(primary, "_blank", "noopener,noreferrer"); return; }
+
+  // Gentle fallbacks if the first URL has trouble loading
+  setTimeout(() => { try { if (win.location.hostname.includes("about")) win.location.href = idOnly; } catch(e) { win.location.href = idOnly; } }, 1200);
+  setTimeout(() => { try { if (win.location.hostname.includes("about")) win.location.href = legacy; }  catch(e) { win.location.href = legacy;  } }, 2400);
+  setTimeout(() => { try { if (win.location.hostname.includes("about")) win.location.href = legacyId;} catch(e) { win.location.href = legacyId;} }, 3600);
+
+  win.focus();
+}
+</script>
+
+<p style="font-size: 0.8rem; color:#ccc; margin-top:4px;">
+  <a href="https://chatgpt.com/g/g-68ac96ee9cf081919a38a6730ac70745-soundmuseai"
+     target="_blank" rel="noopener noreferrer">
+     Open in a new tab instead
+  </a>
+</p>
 </div> <!-- ✅ closes .chat-box -->
 
         <!-- Moved here -->
