--- a/index.html
+++ b/index.html
@@ -88,39 +88,38 @@
        <div class="chat-box">
   <h3>SoundMuse AI Chat</h3>
 
-<button onclick="openSoundMuse()" title="Open SoundMuseAI in a floating window">
+<button onclick="openSoundMuse()" title="Open SoundMuseAI in a floating/new tab">
   Open SoundMuseAI in ChatGPT
 </button>
 
 <p style="font-size: 0.85rem; color: #ccc; margin-top: 6px;">
-  (Opens in a floating window; allow pop-ups for this site.)
+  (On tablets this may open as a new tab. If prompted, choose “Allow”.)
 </p>
+
+<!-- Hidden fallback link for strict popup blockers -->
+<a id="sm-fallback"
+   href="https://chatgpt.com/g/g-68ac96ee9cf081919a38a6730ac70745-soundmuseai"
+   target="_blank" rel="noopener noreferrer" style="display:none">fallback</a>
 
 <script>
 function openSoundMuse() {
-  // Primary (from your Share dialog)
-  const primary = "https://chatgpt.com/g/g-68ac96ee9cf081919a38a6730ac70745-soundmuseai";
-  // Fallbacks
-  const idOnly   = "https://chatgpt.com/g/g-68ac96ee9cf081919a38a6730ac70745";
-  const legacy   = "https://chat.openai.com/g/g-68ac96ee9cf081919a38a6730ac70745-soundmuseai";
-  const legacyId = "https://chat.openai.com/g/g-68ac96ee9cf081919a38a6730ac70745";
+  // Exact Share link (matches your screenshots)
+  const url = "https://chatgpt.com/g/g-68ac96ee9cf081919a38a6730ac70745-soundmuseai";
 
-  const w = 900, h = 700;
-  const left = Math.round((screen.width - w) / 2);
-  const top  = Math.round((screen.height - h) / 2);
+  // 1) Open an about:blank window immediately on user gesture.
+  // This satisfies mobile/tablet popup rules.
+  let win = window.open("about:blank", "SoundMuseAI");
 
-  let win = window.open(
-    primary,
-    "SoundMuseAI",
-    `width=${w},height=${h},left=${left},top=${top},resizable=yes,scrollbars=yes`
-  );
-  if (!win) { window.open(primary, "_blank", "noopener,noreferrer"); return; }
+  // 2) If the browser blocked it, click a hidden <a> as fallback.
+  if (!win || win.closed) {
+    const a = document.getElementById("sm-fallback");
+    if (a) a.click();
+    return;
+  }
 
-  // Gentle fallbacks if the first URL has trouble loading
-  setTimeout(() => { try { if (win.location.hostname.includes("about")) win.location.href = idOnly; } catch(e) { win.location.href = idOnly; } }, 1200);
-  setTimeout(() => { try { if (win.location.hostname.includes("about")) win.location.href = legacy; }  catch(e) { win.location.href = legacy;  } }, 2400);
-  setTimeout(() => { try { if (win.location.hostname.includes("about")) win.location.href = legacyId;} catch(e) { win.location.href = legacyId;} }, 3600);
-
+  // 3) Point the new window to your GPT. No async delays.
+  try { win.opener = null; } catch(e) {}
+  win.location.href = url;
   win.focus();
 }
 </script>
