--- a/saved-chats.html
+++ b/saved-chats.html
@@ -154,41 +154,48 @@
       <label><input type="radio" name="sort-chat" /> A–Z</label>
     </div>
 
-    <div class="file-entry">
-      <div class="file-header">
-        <span class="file-title">🎶 Professional Music Language in metaphors</span>
-        <div class="actions">
-          <button>📌 Pin</button>
-          <button>👀 View</button>
-          <button>📁 Archive</button>
-          <button>🗑️ Delete</button>
-        </div>
-      </div>
+    <!-- Other Chats item 1 -->
+<div class="file-entry">
+  <div class="file-header">
+    <span class="file-title">🎶 Professional Music Language in metaphors</span>
+    <span class="chat-date">Saved: 3 Sep 2025</span>
+    <div class="actions">
+      <button>📌 Pin</button>
+      <button>👀 View</button>
+      <button>📁 Archive</button>
+      <button>🗑️ Delete</button>
     </div>
+  </div>
+</div>
 
-    <div class="file-entry">
-      <div class="file-header">
-        <span class="file-title">🎷 Saxophone score for Classic Jazz piece</span>
-        <div class="actions">
-          <button>📌 Pin</button>
-          <button>👀 View</button>
-          <button>📁 Archive</button>
-          <button>🗑️ Delete</button>
-        </div>
-      </div>
+<!-- Other Chats item 2 -->
+<div class="file-entry">
+  <div class="file-header">
+    <span class="file-title">🎷 Saxophone score for Classic Jazz piece</span>
+    <span class="chat-date">Saved: 21 Aug 2025</span>
+    <div class="actions">
+      <button>📌 Pin</button>
+      <button>👀 View</button>
+      <button>📁 Archive</button>
+      <button>🗑️ Delete</button>
     </div>
+  </div>
+</div>
 
-    <div class="file-entry">
-      <div class="file-header">
-        <span class="file-title">🎻 Humorous Baroque – Love Song Snoring Edition</span>
-        <div class="actions">
-          <button>📌 Pin</button>
-          <button>👀 View</button>
-          <button>📁 Archive</button>
-          <button>🗑️ Delete</button>
-        </div>
-      </div>
+<!-- Other Chats item 3 -->
+<div class="file-entry">
+  <div class="file-header">
+    <span class="file-title">🎻 Humorous Baroque – Love Song Snoring Edition</span>
+    <span class="chat-date">Saved: 15 Aug 2025</span>
+    <div class="actions">
+      <button>📌 Pin</button>
+      <button>👀 View</button>
+      <button>📁 Archive</button>
+      <button>🗑️ Delete</button>
     </div>
+  </div>
+</div>
+
 
     <p style="margin-top: 2rem; font-style: italic; color: #ccc;">
       These demo chat titles reflect a few of the things SoundMuseAI could help with.
